# catalog

./: .gitignore  README.md  alembic.ini  dockerfile  pyproject.toml  reqs.txt
alembic/: env.py
alembic/versions/: 2025_06_07_1344-914f191a913d_create_users_table.py
src/: main.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  collections.py  prices.py  products.py
src/core/: config.py
src/core/admin/: admin.py
src/core/crud/: prices.py
src/core/crud/collections/: collections.py
src/core/crud/prices/: prices.py
src/core/crud/products/: products.py
src/core/models/: base_class.py  db_helper.py  models.py
src/core/schemas/: prices_schema.py
src/core/schemas/collections/: collections_query_schema.py
src/core/schemas/products/: products_query_schema.py
src/core/utils/: errors_handlers.py  logger.py
