[project]
name = "catalog"
version = "0.1.0"
description = "API"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9.2, <4"
dependencies = [
    "alembic (>=1.16.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "h11 (>=0.16.0,<0.17.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "sqlacodegen (>=3.0.0,<4.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
